# corrosion

./: .gitignore  Cargo.toml  LICENSE  README.md  build_rust.sh  osx_vst3_bundler.sh
src/: corrosion.rs  corrosion_params.rs  lib.rs
